Fixed regression on name-cell truncated link

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -134,6 +134,11 @@ $shadow-transition-width: 10px;
         }
 
         .column-header {
+          // Filters next to header name
+          display: flex;
+          min-width: max-content;
+          gap: $pad-small;
+
           span {
             display: flex;
             align-items: center;
