--- a/frontend/components/forms/fields/InputField/_styles.scss
+++ b/frontend/components/forms/fields/InputField/_styles.scss
@@ -96,7 +96,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin: $pad-xsmall;
+    margin: 1px 4px;
     background-color: $core-fleet-white;
   }
 
